--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
+    "moment": "^2.30.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.5",
     "multer": "^1.4.5-lts.1",
